# advent_of_code

aoc-2015/: Cargo.toml
aoc-2015/src/: main.rs
aoc-2017/: Cargo.toml
aoc-2017/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
aoc-2018/: Cargo.toml  README.md
aoc-2018/input/: day10_in.txt  day20_in.txt  day23_in.txt  day24_in.txt  day3_preprocessed.txt  day4_in.txt  (+1 more)
aoc-2019/: .gitignore  Cargo.toml  README.md
aoc-2020/: .gitignore  Cargo.toml  README.md
aoc-2021/: Cargo.toml
aoc-2022/: .gitignore  Cargo.toml  README.md  prepare.py
aoc-2023/: .env  Cargo.toml  prepare.py  score.ipynb
aoc-2024/: .gitignore  Cargo.toml  bench.bat  prepare.py  t.txt
aoc-2024/benches/: day_13.rs  day_13_simd.rs
aoc-2024/examples/: day_01.py  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_13_simd.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_17_2.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs
aoc-2024/input/: day_20.txt  day_23.txt  test.txt
aoc-2024/src/: bitset.rs  grid.rs  lib.rs  vector.rs
aoc-2025/: day_01.go  day_01_test.go  day_03.go  day_04.go  day_05.go  day_06.go  day_07.go  day_08.go  day_09 copy.go  day_09.go  day_10.go  day_10.py  day_11.go  go.mod  go.sum  run.sh  utils.go
(+198 files in other folders)
