[package]
edition = "2021"
name = "aoc-2024"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
rayon = "1.10.0"
dashmap = "6.1.0"
regex = "1.11.1"
# z3 = { version = "0.12.1", features = ["static-link-z3"] }